--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: elixir
+elixir:
+  - 1.3.2
 before_install:
+  - npm install
   - mix local.hex --force
-  - mix deps.get
+  - mix do deps.get, deps.compile
 script:
   - mix test
 env:
