--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ elixir:
   - 1.3.2
 before_install:
   - mix local.hex --force
+  - mix local.rebar --force
   - mix do deps.get, deps.compile
 script:
   - mix test
